# cloud-run-shell

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  cloudrun.yaml  deploy.sh  go.work.sum  main.py  pyproject.toml  shell.sh
bench/: go.mod  go.sum  main.go  main_test.go
client/: go.mod  go.sum  main.go  shell.sh
mainapp/: go.mod  go.sum  main.go
shellapp/: Dockerfile  main.py  pyproject.toml
sidecar/: Dockerfile  go.mod  go.sum  main.go
